@@ -7,7 +7,9 @@
 	- Add mglData::Roll() for "rolling" data along direction. Improve Swap() function.
 	- Axis now can have "arrows" at the end by setting arrow style ("AKDTVISO") for Axis().
 	- Add MGL commands: "insert dat 'dir' [at=0 num=1]", "delete dat 'dir' [at=0 num=1]", "roll Dat 'dir' num".
+	- Add C/Fortran interface functions for widget features.
 	- Now $N is substituted into the second argument of MGL commands 'define', 'defnum', 'defpal', 'defchr'.
+	- Reduce animation delay to 1 sec.
 	- Bugfix with newline symbol '\n'
 	- Bugfix with wrong restore previous InPlot() after text with style 'a'.
 	- Bugfix with label position for log-scale axis.
